--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.2.1",
     "@tanstack/react-query": "^5.55.3",
+    "ethers": "^6.13.5",
     "next": "^14.2.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
