--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@pinata/sdk": "^2.1.0",
     "@rainbow-me/rainbowkit": "^2.2.1",
     "@tanstack/react-query": "^5.55.3",
+    "axios": "^1.7.9",
     "ethers": "^6.13.5",
+    "form-data": "^4.0.2",
     "next": "^15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
